# trendsphere_ai

./: .gitignore  README.md  pyproject.toml
agents_dev/: README.md  playground.ipynb  pyproject.toml  requirements.txt
agents_dev/my_agent/: DatabaseManager.py  SQLAgent.py  State.py  WorkflowManager.py  main.py
agents_dev/test_pydantic_ai/: .gitignore  db_config.py  main.py
analytics/: .user.yml  README.md  dbt_project.yml  profiles.yml
analytics/docs/: DATA_MODELING_ARCHITECTURE.md  MODELING_GUIDELINES.md
analytics/models/: _exposures.yml  _sources.yml
analytics/models/marts/: README.md  _marts.yml
analytics/models/staging/: README.md  _staging.yml  sources.yml  stg_branches.sql  stg_orders.sql  stg_products.sql  stg_sales.sql
analytics_pg/: .user.yml  IMPLEMENTATION.md  README.md  dbt_project.yml  profiles.yml
analytics_pg/models/staging/: sources.yml  stg_branches.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
backend_py/: requirements.txt
backend_py/my_agent/: DatabaseManager.py  SQLAgent.py  WorkflowManager.py  main.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/: AnalyticsSidebar.tsx  ChatAssistant.tsx  MetricCard.tsx  ProductAnalytics.tsx  RecentTransactions.tsx  Sidebar.tsx  (+1 more)
full_stack_app/backend/: README.md  requirements.txt
full_stack_app/dashboard/: .dockerignore  Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
poc_duckdb_agentic/: requirements.txt  test.ipynb  test_duckdb.duckdb.wal
(+180 files in other folders)
